Remove plantation registry